# ESPGRBL

./: CMakeLists.txt  README.md  sdkconfig
components/nvs_flash/: CMakeLists.txt
components/tcpip_adapter/: tcpip_adapter_lwip.c
components/tcpserver/: CMakeLists.txt  tcp_server.c  tcp_server.cpp
components/tcpserver/include/: tcp_server.h
components/websocket/: README.md  websocket_server.c
components/websocket/include/: websocket.h
main/: CMakeLists.txt  esp32-hal-cpu.c  esp32-hal-matrix.c  gcode.cpp  main.cpp  motion_control.cpp  protocol-old.7z  protocol-old.cpp  protocol.cpp  report.cpp  serial.cpp  spindle_control.cpp  stepper.cpp
main/server/: test.js
